# be_android

./: .dockerignore  .env.docker  .env.example  .env.template  .gitignore  Dockerfile  HATCHET_WORKER.md  README.md  add_admin.py  docker-compose.yml  main.py  pyproject.toml  remove_auth.py  test_worker.py  testcase.txt
app/: __init__.py
app/api/: __init__.py
app/api/endpoints/: __init__.py  admin.py  attendances.py  auth.py  class_students.py  classes.py  cohorts.py  face_templates.py  health.py  majors.py  subjects.py  teaching_sessions.py
app/api/v1/: __init__.py  academic.py  admin.py  auth.py  classes.py  users.py
app/core/: __init__.py  auth.py  auth_db.py  config.py  database.py  dependencies.py  roles.py  scheduler.py  security.py
app/models/: __init__.py  academic.py  admin.py  attendance.py  base.py  classes.py  users.py
app/repositories/: __init__.py  academic.py  admin.py  attendances.py  base.py  class_students.py  classes.py  cohorts.py  face_templates.py  majors.py  students.py  subjects.py  teachers.py  teaching_sessions.py  users.py
app/schemas/: __init__.py  academic.py  admin.py  attendance.py  auth.py  base.py  classes.py  excel.py  face_templates.py  teaching_sessions.py  users.py
app/services/: __init__.py  academic.py  admin.py  base.py  classes.py  excel.py  supabase.py  users.py
tests/: __init__.py  test_main.py
worker/: Dockerfile  main.py  requirements.txt
